overlap fix

--- a/themes/healthcare-senior-living/style.css
+++ b/themes/healthcare-senior-living/style.css
@@ -123,7 +123,7 @@ p.no-margin-bottom,
 	text-align: left;
 }
 .hsl-loop-img-container {
-	padding: 0 35px;
+	padding: 0 35px 25px 35px;
 	position: relative;
 	z-index: 2;
 }
